# info-kloliste

./: CMakeLists.txt  FileLoader.cpp  FileLoader.h  README.md  Student.cpp  Student.h  ToiletList.cpp  ToiletList.h  gui.cpp  gui.h  gui.ui  kloliste-beispiel.csv  main.cpp  main.h  setup-script.iss
.github/workflows/: cmake-single-platform.yml
